--- a/Malin_Space_Science_System/Malin_Space_Science_System.de.resx
+++ b/Malin_Space_Science_System/Malin_Space_Science_System.de.resx
@@ -250,6 +250,21 @@
   <data name="label_eHorizon.Text" xml:space="preserve">
     <value>Ereignishorizont:</value>
   </data>
+  <data name="menuStrip1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>769, 29</value>
+  </data>
+  <data name="menuItem_Options.Size" type="System.Drawing.Size, System.Drawing">
+    <value>87, 25</value>
+  </data>
+  <data name="menuItem_Options.Text" xml:space="preserve">
+    <value>Optionen</value>
+  </data>
+  <data name="menuItem_Languanges.Size" type="System.Drawing.Size, System.Drawing">
+    <value>187, 26</value>
+  </data>
+  <data name="menuItem_Languanges.Text" xml:space="preserve">
+    <value>Sprachen</value>
+  </data>
   <data name="languages_English.Size" type="System.Drawing.Size, System.Drawing">
     <value>161, 26</value>
   </data>
@@ -268,56 +283,32 @@
   <data name="languages_French.Text" xml:space="preserve">
     <value>Französisch</value>
   </data>
-  <data name="menuItem_Languanges.Size" type="System.Drawing.Size, System.Drawing">
-    <value>187, 26</value>
-  </data>
-  <data name="menuItem_Languanges.Text" xml:space="preserve">
-    <value>Sprachen</value>
-  </data>
-  <data name="customize_Buttons.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 26</value>
-  </data>
-  <data name="customize_Buttons.Text" xml:space="preserve">
-    <value>Tasten</value>
-  </data>
-  <data name="customize_Textboxes.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 26</value>
-  </data>
-  <data name="customize_Textboxes.Text" xml:space="preserve">
-    <value>Textfelder</value>
-  </data>
-  <data name="customize_Lable.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 26</value>
-  </data>
-  <data name="customize_Lable.Text" xml:space="preserve">
-    <value>Etikett</value>
-  </data>
-  <data name="customize_Background.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 26</value>
-  </data>
-  <data name="customize_Background.Text" xml:space="preserve">
-    <value>Hintergrund</value>
-  </data>
   <data name="menuItem_Customize.Size" type="System.Drawing.Size, System.Drawing">
     <value>187, 26</value>
   </data>
   <data name="menuItem_Customize.Text" xml:space="preserve">
     <value>Anpassen</value>
   </data>
+  <data name="customize_Buttons.Text" xml:space="preserve">
+    <value>Tasten</value>
+  </data>
+  <data name="customize_Textboxes.Text" xml:space="preserve">
+    <value>Textfelder</value>
+  </data>
+  <data name="customize_Lable.Text" xml:space="preserve">
+    <value>Etikett</value>
+  </data>
+  <data name="customize_Background.Text" xml:space="preserve">
+    <value>Hintergrund</value>
+  </data>
+  <data name="customize_Table.Text" xml:space="preserve">
+    <value>Tisch</value>
+  </data>
   <data name="menuItem_Modes.Size" type="System.Drawing.Size, System.Drawing">
     <value>187, 26</value>
   </data>
   <data name="menuItem_Modes.Text" xml:space="preserve">
     <value>Dunkler Modus</value>
-  </data>
-  <data name="menuItem_Options.Size" type="System.Drawing.Size, System.Drawing">
-    <value>87, 25</value>
-  </data>
-  <data name="menuItem_Options.Text" xml:space="preserve">
-    <value>Optionen</value>
-  </data>
-  <data name="menuStrip1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>769, 29</value>
   </data>
   <data name="button_sVelocity.Location" type="System.Drawing.Point, System.Drawing">
     <value>365, 92</value>
@@ -331,7 +322,22 @@
   <data name="label1.Location" type="System.Drawing.Point, System.Drawing">
     <value>291, 250</value>
   </data>
+  <data name="columnStarVelocity.Text" xml:space="preserve">
+    <value>Sterngeschwindigkeit</value>
+  </data>
+  <data name="columnStarDistance.Text" xml:space="preserve">
+    <value>Sternenentfernung</value>
+  </data>
+  <data name="columnHorizon.Text" xml:space="preserve">
+    <value>Ereignishorizont</value>
+  </data>
+  <data name="listView.Location" type="System.Drawing.Point, System.Drawing">
+    <value>63, 289</value>
+  </data>
+  <data name="listView.Size" type="System.Drawing.Size, System.Drawing">
+    <value>663, 142</value>
+  </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>769, 293</value>
+    <value>769, 443</value>
   </data>
 </root>
